--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,9 +13,12 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "fontsource-roboto": "^3.1.5",
+    "gsap": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-swipeable-views": "^0.13.9",
+    "react-transition-group": "^4.4.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -41,5 +45,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {
+    "@types/react-swipeable-views": "^0.13.0"
+  },
+  "author": "Piravin K C M",
+  "license": "ISC"
 }
