--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^16.9.8",
     "fontsource-roboto": "^3.1.5",
+    "gh-pages": "^3.1.0",
     "gsap": "^3.5.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
