--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "description": "SAE India Collegiate Club at SASTRA Deemed to be University",
   "main": "index.js",
   "devDependencies": {
     "@types/react-swipeable-views": "^0.13.0"
